--- a/03-reprod-vc/03-reprod-vc.html
+++ b/03-reprod-vc/03-reprod-vc.html
@@ -20,7 +20,7 @@ class: center, middle, inverse, title-slide
 # 03 - Reproducibility and Version Control
 ## ml4econ, HUJI 2021
 ### Itamar Caspi
-### March 21, 2021 (updated: 2021-03-21)
+### March 21, 2021 (updated: 2021-04-01)
 
 ---
 
@@ -310,7 +310,7 @@ tidyverse_packages()
 
 Note that not all these packages are loaded by default (e.g., `lubrudate`.)
 
-We now briefly introduce one the tidyvers flagships: `dplyr`.
+We now briefly introduce one the tidyverse flagships: `dplyr`.
 
 ---
 
