--- a/05-regression-regularization/05-regression-regularization.html
+++ b/05-regression-regularization/05-regression-regularization.html
@@ -20,7 +20,7 @@ class: center, middle, inverse, title-slide
 # 05 - Regression and Regularization
 ## ml4econ, HUJI 2021
 ### Itamar Caspi
-### April 11, 2021 (updated: 2021-04-11)
+### April 11, 2021 (updated: 2021-04-12)
 
 ---
 
@@ -629,7 +629,7 @@ Any penalty that involves the `\(\ell_1\)` norm will do this.
 
 .pull-left[
 
-Contours of the error and constraint functions for lasso (left) and ridge (right). The solid blue areas are the constraint regions, `\(\beta_{1}^{2}+\beta_{2}^{2} \leq t,\)` and `\(\beta_{1}^{2}+\beta_{2}^{2} \leq t\)`, while the red ellipses are the contours of the RSS and `\(\widehat\beta\)` is the OLS estimator.
+Contours of the error and constraint functions for lasso (left) and ridge (right). The solid blue areas are the constraint regions, `\(\beta_{1}^{2}+\beta_{2}^{2} \leq t,\)` and `\(|\beta_{1}|+|\beta_{2}| \leq t\)`, while the red ellipses are the contours of the RSS and `\(\widehat\beta\)` is the OLS estimator.
 
 ]
 
