--- a/a-kaggle/a-kaggle.html
+++ b/a-kaggle/a-kaggle.html
@@ -20,7 +20,7 @@ class: center, middle, inverse, title-slide
 # Midterm Assignment
 ## Kaggle Prediction Competition
 ### Itamar Caspi
-### May 9, 2021 (updated: 2021-05-09)
+### May 9, 2021 (updated: 2021-05-10)
 
 ---
 
@@ -87,7 +87,7 @@ Your final ranking is based on how well you perform on the *private* test set.
 
 3. Preprocessing (standardization, dummies, interactions, etc.).
 
-4. Choose a model class (asso, ridge, trees, etc.).  
+4. Choose a model class (Lasso, ridge, trees, etc.).  
 
 5. Tune complexity (Cross validation).  
 
