--- a/01-overview/01-overview.html
+++ b/01-overview/01-overview.html
@@ -20,7 +20,7 @@ class: center, middle, inverse, title-slide
 # 01 - Course Overview
 ## ml4econ, HUJI 2021
 ### Itamar Caspi
-### March 14, 2021 (updated: 2021-03-14)
+### March 14, 2021 (updated: 2021-06-06)
 
 ---
 
@@ -407,13 +407,13 @@ class: .title-slide-final, center, inverse, middle
 ---
 # References
 
-&lt;a name=bib-athey2018the&gt;&lt;/a&gt;[[1]](#cite-athey2018the) S. Athey. "The
-impact of machine learning on economics". In: _The Economics of Artificial
-Intelligence: An Agenda_. University of Chicago Press, 2018.
+[1] S. Athey. "The impact of machine learning on economics". In: _The
+Economics of Artificial Intelligence: An Agenda_. University of Chicago
+Press, 2018.
 
-[2] T. Hastie, R. Tibshirani, and J. Friedman. _The Elements of Statistical
-Learning: Data Mining, Inference, and Prediction, Second Edition_.
-Springer, פבר. 2009. ISBN: 9780387848570.
+[2] T. Hastie, R. Tibshirani, and J. Friedman. _The Elements of
+Statistical Learning: Data Mining, Inference, and Prediction, Second
+Edition_. Springer, פבר. 2009. ISBN: 9780387848570.
 
 [3] G. James, T. Hastie, D. Witten, et al. _An Introduction to Statistical
 Learning: With Applications in R_. Springer Texts in Statistics. Springer
